<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="30dp"
    tools:context=".InformationMain">

    <TextView
        android:id="@+id/text_sign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Infromación"
        android:gravity="center"
        android:textSize="25dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginBottom="50dp"/>
    <Button
        android:id="@+id/bottom_museo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/green3"
        android:text="@string/Museos"/>
    <Button
        android:id="@+id/button_mapa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/green3"
        android:text="@string/Mapa"/>

    <Button
        android:id="@+id/button_favoritos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/green3"
        android:text="@string/Favoritos"/>

    <Button
        android:id="@+id/button_noticias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green3"
        android:text="@string/Noticias"/>

</LinearLayout>